
- Renamed Duro_print_error() as Duro_println_error(). The output of
  Duro_print_error_f() is no longer followed by a newline.

- Removed RDB_obj_set_const() and RDB_obj_is_const().

- Added read-only operators % (modulus), abs(), pow(), exp(), ln(), and log().

- Added operators os.chdir() and io.popen().

- Moved exit() operators to package 'os'. 

DuroDBMS 1.1

- Accessing properties is now possible using value.property in addition
  to the_property(value).

- Added read-only operators serialize(), add_seconds(), weekday(), local_to_utc(),
  and format() to libduro.

- Added RDB_obj_to_bin() and RDB_bin_to_obj() to rel/rdb.h.
  Removed internal functions from rel/serialize.h.

- Renamed RDB_expr_comp() as RDB_expr_property().

DuroDBMS 1.0

- Renamed datetime properties min and sec to minute and second, respectively.

- Statements of the form the_length(the_property(v)) := ... are now supported
  for array-valued properties. 

- Duro D/T now supports a CONST statement.

- The second parameter of aggregate operators SUM, AVG, MAX, MIN, ALL, AND, ANY, OR
  can be an expresssion and is optional if the relation has only one attribute.
  The second argument of RDB_min() etc. is now of type RDB_expression *. 

- Added Duro_rollback_all().

- Made datetime type ordered.

- Fixed bug in RDB_drop_table_index().

- Fixed bug with concurrent access when the first tuple is inserted into a table.

- Added RDB_is_array().

- Added getfn/getarg arguments to RDB_multi_assign(), allowing variables
  in updates.

DuroDBMS 0.26

- Duro D/T: Replaced MODULE by PACKAGE.

- Duro D/T: It is now possible to omit the package name when calling a
  user-defined update operator from another operator that belongs to the same
  package.

- Duro D/T: Updating tuples using t.attr := v is now supported in addition to
  UPDATE t { attr := v }.

- Duro D/T: Added D_INSERT and I_DELETE. RDB_ma_insert and RDB_ma_vdelete
  now contain a flags field which must be initialized when a pointer