@@ -23,6 +23,8 @@ DuroDBMS 1.2
 
 - Moved exit() operators to package 'os'. 
 
+- Provided script for database environment upgrade.
+
 DuroDBMS 1.1
 
 - Accessing properties is now possible using value.property in addition
